--- a/superAdmin/CSS/indexs.css
+++ b/superAdmin/CSS/indexs.css
@@ -3,9 +3,11 @@
 /* General Body */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
-    background-color: #f5f6fa !important;
-    color: #333 !important;
+    color: #f5f5f5 !important;
+    background: url('img/BCCI/BCCI_LANDING1.jpg') no-repeat center center fixed !important;
+    background-color: #f5f6fa !important; /* fallback color */
 }
+
 
 /* Right Panel */
 #right-panel {
